<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.example.com.myapplication.MainActivity">
    <item
        android:id="@+id/my_notes"
        android:orderInCategory="100"
        android:title="@string/my_notes_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/recycle_bin"
        android:orderInCategory="100"
        android:title="@string/recycle_bin_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/colors"
        android:orderInCategory="100"
        android:title="@string/colors_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/folders"
        android:orderInCategory="100"
        android:title="@string/folders_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings_item"
        app:showAsAction="never" />
</menu>
